# cerebral-clawtex

./: .gitignore  AGENTS.md  pyproject.toml
docs/plans/: 2026-02-25-cerebral-clawtex-design.md  2026-02-25-cerebral-clawtex-implementation.md  2026-02-25-cerebral-clawtex-implementation.md.tasks.json  2026-02-25-cerebral-clawtex-swarm.md  2026-02-25-cerebral-clawtex-swarm.md.tasks.json
src/cerebral_clawtex/: cli.py  config.py  db.py  hooks.py  phase1.py  phase2.py  redact.py  sessions.py  storage.py
src/cerebral_clawtex/prompts/: __init__.py  phase1_system.md  phase1_user.md  phase2_global_system.md  phase2_global_user.md  phase2_system.md  phase2_user.md
tests/: conftest.py  test_cli.py  test_config.py  test_db.py  test_e2e.py  test_hooks.py  test_phase1.py  test_phase2.py  test_redact.py  test_sessions.py  test_storage.py
