[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cerebral-clawtex"
version = "0.1.0"
description = "Claude Code memory plugin — automatic session learning extraction and consolidation"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "rich>=13.0",
    "litellm>=1.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]

[project.scripts]
clawtex = "cerebral_clawtex.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = ["e2e: end-to-end tests requiring full pipeline"]

[tool.ruff]
target-version = "py312"
line-length = 120
